# wagewhiz

./: .cursorignore  .env.example  .eslintrc.cjs  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc.json  Cargo.toml  bun.lockb  bunfig.toml  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  turbo.json
apps/api/: .env.example  Cargo.toml  go.mod  main.go  package.json
apps/api/migration/: Cargo.toml
apps/api/migration/src/: lib.rs  m20240226_150319_create_people_table.rs  m20240226_151525_create_user_accounts_table.rs  m20240919_174510_create_teams_table.rs  m20240919_185233_person_type.rs
apps/api/migrations/2023-07-19-161749_create_users/: up.sql
apps/api/migrations/2023-07-20-031713_create_people/: up.sql
apps/api/migrations/2023-07-22-074620_create_user_accounts/: up.sql
apps/api/scripts/: generateKeys.js
apps/api/src/: config.rs  constants.rs  database.rs  db.rs  env.rs  errors.rs  lib.rs  main.rs  meilisearch.rs  middlewares.rs  models.rs  schema.rs  types.rs  validation.rs
apps/api/src/entities/: mod.rs  people.rs  person_types.rs  prelude.rs  teams.rs  user_accounts.rs
apps/api/src/graphql/: auth.rs  mod.rs  schema.rs
apps/api/src/graphql/mutation/: auth_mutation.rs  mod.rs
apps/api/src/graphql/query/: me_query.rs  mod.rs  people_query.rs  users_query.rs
apps/api/src/handlers/: 404.rs  auth.rs  me.rs  misc.rs  mod.rs  people.rs
apps/api/src/repositories/: auth_repo.rs  mod.rs  people_repo.rs  users_repo.rs
apps/api/src/services/: auth.rs  auth_service.rs  misc.rs  mod.rs  people.rs  people_service.rs  token_service.rs  users.rs  users_service.rs
apps/api/src/utils/: mod.rs  paseto.rs  serde.rs  serde_bool.rs
apps/job-titles/: .env.example  go.mod  go.sum  main.go  package.json
apps/job-titles-meilisearch/: Dockerfile  package.json
apps/job-titles-meilisearch/dumps/: job-titles.dump
apps/job-titles/conn/: influxdb.go  meilisearch.go
apps/job-titles/env/: env.go
apps/job-titles/handlers/: handlers.go
apps/meilisearch/: package.json
apps/web/: .eslintrc.cjs  .eslintrc.json  components.json  eslint.config.js  graphql-codegen.ts  my-custom-theme.ts  package.json  postcss.config.js  schema.graphql  svelte.config.js  tailwind-base.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts
apps/web-next/: components.json  package.json  vite.config.ts
apps/web-next/src/: app.css
apps/web-next/src/lib/: theAxios.ts
apps/web-next/src/lib/api/: auth.ts
apps/web-next/src/lib/components/: AppHeader.svelte  AppNav.svelte  Sidebar.svelte  Spinner.svelte  SpinnerPage.svelte  TheAvatar.svelte  (+1 more)
apps/web-next/src/routes/: +layout.svelte  +page.svelte
apps/web/src/: app.css  app.html  app.postcss  theme.css
apps/web/src/lib/: errors.ts  theAxios.ts  theQueryClient.ts  types.ts
apps/web/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
apps/web/static/: manifest.json
patches/: bits-ui@0.21.13.patch  svelte-sonner@0.3.27.patch  time+0.3.36.patch
src/: app.css  app.d.ts  app.html
src/lib/components/: EmploymentStatusBadge.svelte  Footer.svelte  Navbar.svelte  Portal.svelte  Sidebar.svelte
src/lib/utils/: nanoid.ts  padNumberWithZeros.ts  validateEmail.ts
src/routes/: +layout.svelte
src/routes/people/: +page.server.ts  +page.svelte
src/routes/people/new/: +page.server.ts  +page.svelte
(+182 files in other folders)
