[package]
name = "api"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata.patch]
crates = ["time"]

[dependencies]
anyhow = "1.0.86"
argon2 = "0.5.3"
ascii85 = "0.2.1"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum-macros = "0.4.1"
base64-url = "3.0.0"
dotenv = "0.15.0"
envy = "0.4.2"
migration = { path = "migration" }
once_cell = "1.19.0"
pasetors = "0.6.8"
sea-orm = { version = "1.0.0", features = [
    "macros",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "with-time",
    "with-uuid",
] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
